# advanced-python

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  advanced-python.tex  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  timings.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yml  tests.yml
_sources/: index.rst
docs/: conf.py  index.rst
neighbour_search/: __init__.py  balltree_ns.py  kdtree_ns.py  naive_ns.py
neighbour_search/scripts/: __init__.py  example_ball_search.py  example_knn_search.py
tests/: conftest.py  functest_ball_search.py  functest_kdtree_ns.py  functest_knn_search.py  performances.csv  test_balltree_ns.py  test_kdtree_ns.py  test_priority_queue.py  tests_naive_ns.py  timings.py
text/: advanced-python.tex  demo_notebook.ipynb  test_sqrt.py
