[project]
name = "neighbour_search"
dynamic = ["version"]

authors = [
    {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be"},
]

description = "An example package implementing neighbour search to demonstrate good practice in Python"

readme = "README.md"

requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    'numpy',
    'matplotlib',
]

[project.urls]
Homepage = "https://github.com/pierre-24/advanced-python/"
Documentation = "https://pierre-24.github.io/advanced-python/"
Repository = "https://github.com/pierre-24/advanced-python.git"
Issues = "https://github.com/pierre-24/advanced-python/issues"

[project.optional-dependencies]
dev = [
    'flake8',
    'flake8-quotes',
    'autopep8',
    'pytest',
    'sphinx',
    'sphinx-book-theme',
    'mypy',
    'jupyter',
]

[project.scripts]

[tool.setuptools]
packages = ["neighbour_search", "neighbour_search.scripts"]

[tool.setuptools.dynamic]
version = {attr = "neighbour_search.__version__"}

